@@ -24,6 +24,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
+import java.util.Arrays;
 
 import org.apache.log4j.Logger;
 
@@ -102,7 +103,7 @@ public class SubMatrix implements java.io.Serializable {
     double[][] C = new double[getRows()][getColumns()];
     for (int i = 0; i < this.getRows(); i++) {
       for (int j = 0; j < this.getColumns(); j++) {
-        C[i][j] += this.get(i, j) + b.get(i, j);
+        C[i][j] = (this.get(i, j) + b.get(i, j));
       }
     }
 
@@ -116,11 +117,14 @@ public class SubMatrix implements java.io.Serializable {
    * @return c
    */
   public SubMatrix mult(SubMatrix b) {
-    double[][] C = new double[getRows()][getColumns()];
+    double[][] C = new double[this.getRows()][b.getColumns()];
+    for (int i = 0; i < this.getRows(); i++) {
+      Arrays.fill(C[i], 0);
+    }
     for (int i = 0; i < this.getRows(); i++) {
       for (int j = 0; j < b.getColumns(); j++) {
         for (int k = 0; k < this.getColumns(); k++) {
-          C[i][k] += this.get(i, j) * b.get(j, k);
+          C[i][j] += this.get(i, k) * b.get(k, j);
         }
       }
     }
